--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   },
   "homepage": "https://github.com/apollostack/apollo-starter-kit#readme",
   "dependencies": {
-    "express": "4.13.4",
-    "apollo-server": "^0.1.2"
+    "apollo-server": "^0.1.2",
+    "casual": "^1.5.8",
+    "express": "4.13.4"
   },
   "devDependencies": {
     "babel-cli": "6.5.1",
