--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   "dependencies": {
     "apollo-server": "^0.1.2",
     "casual": "^1.5.8",
-    "express": "4.13.4"
+    "express": "4.13.4",
+    "lodash": "^4.17.3",
+    "sequelize": "^3.28.0",
+    "sqlite": "^2.2.4"
   },
   "devDependencies": {
     "babel-cli": "6.5.1",
